[package]
name = "deepseek_json"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
clap = { version = "4.0", features = ["derive"] }
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
