[package]
name = "deepseek_json"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "signal", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.99"
thiserror = "2.0.14"
dotenv = "0.15"
clap = { version = "4.5.44", features = ["derive"] }
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "test-util"] }
